Fixed Misaligned Baubles

--- a/application/src/components/StatementCard/StatementCard.css
+++ b/application/src/components/StatementCard/StatementCard.css
@@ -11,7 +11,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-basis: auto;
 }
 
 .statement-card__icon ion-icon {
